# Lizzy

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements_solvers.txt
docs/: docs_requirements.txt
docs/github/tutorials/: radial_aniso.md  rect.md  triforce.md
docs/source/: conf.py  index.rst  references.rst  refs.bib  roadmap.rst
examples/meshes/: Rect.geo  Rect_Type_1.geo  Rect_Type_1.msh  Rect_with_RT_S1.geo  Rect_with_RT_S1.msh  Rect_with_RT_S2.geo  Rect_with_RT_S2.msh  Rect_with_RT_S3.geo  Rect_with_RT_S3.msh  Rect_with_RT_S4.geo  Rect_with_RT_S4.msh  quarter_annulus.geo  quarter_annulus.msh
examples/scripts/: benchmark_solver_comparison.py  channel_flow_with_racetracking.py  channel_flow_with_racetracking_Leon.py  channel_infusion.py  channel_infusion_each_solver_test.py  complex.py  multi_materials.py  new_channel_infusion.py  new_channel_infusion_envversion.py  radial_infusion.py  radial_infusion_annulus.py  solver_comparison.py  test_lizzy_env.py
lizzy/: __init__.py  bcond.py  lizmodel.py  materials.py  simparams.py  splash_logo.py
lizzy/IO/: IO.py  logger.py
lizzy/bcond/: bcond.py
lizzy/cli/: main.py
lizzy/cvmesh/: constr.py  cvmesh.py  entities.py
lizzy/gymenv/: envs.py  lizzyenvs.py
lizzy/lizmodel/: components.py  decorators.py  lizmodel.py  simparams.py
lizzy/render/: render.py
lizzy/sensors/: sensmanager.py
lizzy/solver/: __init__.py  fem.py  fillsolver.py  psolvers.py  solver.py  timestep.py  vsolvers.py
src/lizzy/: __init__.py  exceptions.py
tests/: test_rect.py
training_meshes/: 1D_mesh_training.msh
(+106 files in other folders)
