[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lizzy"
version = "0.1.0"
authors = [
    {name = "Simone Bancora", email = "simone.bancora@gmail.com" },
    ]
maintainers = [
    {name = "Simone Bancora", email = "simone.bancora@gmail.com" },
    ]
requires-python = ">=3.10"
dependencies = [
    "meshio==5.3.5",
    "numpy",
    "scipy",
    "h5py",
    "matplotlib"
]
description = "A filling simulation solver for Liquid Composite Molding (LCM) processes"
readme = "README.md"
keywords = ["rtm", "resin infusion", "finite elements", "solver", "simulation", "lcm"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lizzy*"]

[project.optional-dependencies]
dev = ["pytest"]
petsc = ["petsc", "petsc4py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"

[project.scripts]
lizzy = "lizzy.cli.main:main"